--- a/injected/integration-test/test-pages/webcompat/index.html
+++ b/injected/integration-test/test-pages/webcompat/index.html
@@ -12,6 +12,7 @@
         <li><a href="./pages/message-handlers.html">Message Handlers</a> - <a href="./config/message-handlers.json">Config</a></li>
         <li><a href="./pages/shims.html">Shims</a> - <a href="./config/shims.json">Config</a></li>
         <li><a href="./pages/modify-localstorage.html">Modify localStorage</a> - <a href="./config/modify-localstorage.json">Config</a></li>
+        <li><a href="./pages/device-enumeration.html">Device Enumeration</a> - <a href="./config/device-enumeration.json">Config</a></li>
     </ul>
 </body>
 </html>
