Prettier the test-pages

--- a/injected/integration-test/test-pages/infra/pages/conditional-matching-experiments.html
+++ b/injected/integration-test/test-pages/infra/pages/conditional-matching-experiments.html
@@ -1,49 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Conditional Matching experiments</title>
-  <link rel="stylesheet" href="../../shared/style.css">
-</head>
-<body>
-    <script src="../../shared/utils.js"></script>
-    <p><a href="../index.html">[Infra]</a></p>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Conditional Matching experiments</title>
+        <link rel="stylesheet" href="../../shared/style.css" />
+    </head>
+    <body>
+        <script src="../../shared/utils.js"></script>
+        <p><a href="../index.html">[Infra]</a></p>
 
-    <p>This page verifies that APIs get modified when in an experiment. Ensure you're sending the following cohorts:
-        <code>
-        currentCohorts: [
-            {
-                "feature": "contentScopeExperiments",
-                "subfeature": "bloops",
-                "cohort": "control",
-            },
-            {
-                "feature": "contentScopeExperiments",
-                "subfeature": "test",
-                "cohort": "treatment",
-            },
-        ],
-        </code>
-    </p>
+        <p>
+            This page verifies that APIs get modified when in an experiment. Ensure you're sending the following cohorts:
+            <code>
+                currentCohorts: [ { "feature": "contentScopeExperiments", "subfeature": "bloops", "cohort": "control", }, { "feature":
+                "contentScopeExperiments", "subfeature": "test", "cohort": "treatment", }, ],
+            </code>
+        </p>
 
-    <script>
-        test('Conditional matching experiments', async () => {
-            const res = navigator.hardwareConcurrency;
-            // Either is valid here, but 100 is the default which would mean the experiment is not running
-            const expected  = res === 200 ? 200 : 300;
-            const results = [
-                {
-                    name: "APIs changing, expecting to always match",
-                    result: res,
-                    expected: expected,
-                }
-            ];
-            return results;
-        });
+        <script>
+            test('Conditional matching experiments', async () => {
+                const res = navigator.hardwareConcurrency;
+                // Either is valid here, but 100 is the default which would mean the experiment is not running
+                const expected = res === 200 ? 200 : 300;
+                const results = [
+                    {
+                        name: 'APIs changing, expecting to always match',
+                        result: res,
+                        expected: expected,
+                    },
+                ];
+                return results;
+            });
 
-        // eslint-disable-next-line no-undef
-        renderResults();
-    </script>
-</body>
+            // eslint-disable-next-line no-undef
+            renderResults();
+        </script>
+    </body>
 </html>
