--- a/injected/integration-test/test-pages/infra/pages/conditional-matching.html
+++ b/injected/integration-test/test-pages/infra/pages/conditional-matching.html
@@ -1,64 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Conditional Matching</title>
-  <link rel="stylesheet" href="../../shared/style.css">
-</head>
-<body>
-    <script src="../../shared/utils.js"></script>
-    <p><a href="../index.html">[Infra]</a></p>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Conditional Matching</title>
+        <link rel="stylesheet" href="../../shared/style.css" />
+    </head>
+    <body>
+        <script src="../../shared/utils.js"></script>
+        <p><a href="../index.html">[Infra]</a></p>
 
-    <p>This page verifies that APIs get modified</p>
+        <p>This page verifies that APIs get modified</p>
 
-    <script>
-        test('Conditional matching', async () => {
-            const results = [
-                {
-                    name: "APIs changing, expecting to always match",
+        <script>
+            test('Conditional matching', async () => {
+                const results = [
+                    {
+                        name: 'APIs changing, expecting to always match',
+                        result: navigator.hardwareConcurrency,
+                        expected: 222,
+                    },
+                ];
+                const oldPathname = window.location.pathname;
+                const newUrl = new URL(window.location.href);
+                newUrl.pathname = '/test/test/path';
+                window.history.pushState(null, '', newUrl.href);
+                await new Promise((resolve) => requestIdleCallback(resolve));
+                results.push({
+                    name: 'Expect URL to be changed',
+                    result: window.location.pathname,
+                    expected: '/test/test/path',
+                });
+                results.push({
+                    name: 'APIs changing, expecting to match only when the URL is correct',
                     result: navigator.hardwareConcurrency,
-                    expected: 222
-                }
-            ];
-            const oldPathname = window.location.pathname;
-            const newUrl = new URL(window.location.href);
-            newUrl.pathname = "/test/test/path";
-            window.history.pushState(null, '', newUrl.href);
-            await new Promise(resolve => requestIdleCallback(resolve));
-            results.push({
-                name: "Expect URL to be changed",
-                result: window.location.pathname,
-                expected: '/test/test/path'
-            })
-            results.push({
-                name: "APIs changing, expecting to match only when the URL is correct",
-                result: navigator.hardwareConcurrency,
-                expected: 333
-            })
-            const popStatePromise = new Promise(resolve => {
-                window.addEventListener('popstate', resolve, { once: true });
+                    expected: 333,
+                });
+                const popStatePromise = new Promise((resolve) => {
+                    window.addEventListener('popstate', resolve, { once: true });
+                });
+                // Call pop state to revert the URL
+                window.history.back();
+                await popStatePromise;
+                results.push({
+                    name: 'Expect URL to be reverted',
+                    result: window.location.pathname,
+                    expected: oldPathname,
+                });
+                results.push({
+                    name: 'APIs changing, expecting to match only when the URL is correct',
+                    result: navigator.hardwareConcurrency,
+                    expected: 222,
+                });
+
+                return results;
             });
-            // Call pop state to revert the URL
-            window.history.back();
-            await popStatePromise;
-            results.push({
-                name: "Expect URL to be reverted",
-                result: window.location.pathname,
-                expected: oldPathname
-            })
-            results.push({
-                name: "APIs changing, expecting to match only when the URL is correct",
-                result: navigator.hardwareConcurrency,
-                expected: 222
-            })
 
-            return results;
-        });
-
-
-        // eslint-disable-next-line no-undef
-        renderResults();
-    </script>
-</body>
+            // eslint-disable-next-line no-undef
+            renderResults();
+        </script>
+    </body>
 </html>
