--- a/injected/integration-test/test-pages/index.html
+++ b/injected/integration-test/test-pages/index.html
@@ -3,5 +3,8 @@
         <h1>Integration page</h1>
         <p>This loads the injection file as if it were loaded through the content script.</p>
         <script src="./build/contentScope.js"></script>
+        <ul>
+            <li><a href="./webcompat/">Web compat testing</a></li>
+        </ul>
     </body>
 </html>
