Device enum support (#1806)
* Add PoC support for device enum

* debugging

* Restore Scriptlets submodule to default master branch

* Add typing

* Make pass instanceof checks

* Use input interface also

* Lint fixes

* Add test case

* Reset submodule

* Update remote config

* Fix test keys

* Add types

* Update config

* Disable read only check

* Fix device info definition

* Lint fix

* Readonly doens't throw

* Remove unnecessary file

--- a/injected/integration-test/test-pages/webcompat/index.html
+++ b/injected/integration-test/test-pages/webcompat/index.html
@@ -12,6 +12,8 @@
         <li><a href="./pages/message-handlers.html">Message Handlers</a> - <a href="./config/message-handlers.json">Config</a></li>
         <li><a href="./pages/shims.html">Shims</a> - <a href="./config/shims.json">Config</a></li>
         <li><a href="./pages/modify-localstorage.html">Modify localStorage</a> - <a href="./config/modify-localstorage.json">Config</a></li>
+        <li><a href="./pages/device-enumeration.html">Device Enumeration</a></li>
+        <li><a href="./pages/enumerate-devices-api-test.html">Enumerate Devices API Test</a> - <a href="./config/enumerate-devices-api.json">Config</a></li>
     </ul>
 </body>
 </html>
