Fake extension poc config change backuo

--- a/injected/integration-test/test-pages/telemetry/index.html
+++ b/injected/integration-test/test-pages/telemetry/index.html
@@ -13,6 +13,7 @@
 <p>Test pages for the Telemetry feature that observes video playback and user interactions.</p>
 
 <ul>
+    <li><a href="./pages/telemetry-test.html">Simple Telemetry Test</a></li>
     <li><a href="./pages/basic-video.html">Basic Video Playback</a></li>
     <li><a href="./pages/dynamic-video.html">Dynamically Added Videos</a></li>
     <li><a href="./pages/multiple-videos.html">Multiple Videos</a></li>
