add element hiding cases from p-t-p

--- a/injected/integration-test/test-pages/element-hiding/index.html
+++ b/injected/integration-test/test-pages/element-hiding/index.html
@@ -16,6 +16,7 @@
         <li><a href="./pages/modify-attributes.html">Modify Attributes</a> - <a href="./config/modify-attributes.json">Config</a></li>
         <li><a href="./pages/modify-styles.html">Modify Styles</a> - <a href="./config/modify-styles.json">Config</a></li>
         <li><a href="./pages/basic-hiding.html">Disabled Test</a> - <a href="./config/disabled.json">Config</a></li>
+        <li><a href="./pages/privacy-test-pages-match.html">Privacy Test Pages Match</a> - <a href="./config/privacy-test-pages-match.json">Config</a></li>
     </ul>
 </body>
 </html>
