--- a/injected/integration-test/test-pages/infra/pages/max-supported-version-int.html
+++ b/injected/integration-test/test-pages/infra/pages/max-supported-version-int.html
@@ -25,7 +25,7 @@
                 results.push({
                     name: 'versionIntTestBelow should always be false/undefined',
                     result: window.versionIntTestBelow,
-                    expected: false,
+                    expected: undefined,
                 });
                 return results;
             });
