--- a/injected/integration-test/test-pages/infra/pages/max-supported-version-string.html
+++ b/injected/integration-test/test-pages/infra/pages/max-supported-version-string.html
@@ -25,7 +25,7 @@
                 results.push({
                     name: 'versionStringTestBelow should always be false/undefined',
                     result: window.versionStringTestBelow,
-                    expected: false,
+                    expected: undefined,
                 });
                 return results;
             });
