--- a/injected/integration-test/test-pages/infra/pages/max-supported-version-string.html
+++ b/injected/integration-test/test-pages/infra/pages/max-supported-version-string.html
@@ -29,6 +29,7 @@
                 });
                 return results;
             });
+            renderResults();
         </script>
     </body>
 </html>
