--- a/injected/integration-test/test-pages/scriptlets/pages/remove-node-text.html
+++ b/injected/integration-test/test-pages/scriptlets/pages/remove-node-text.html
@@ -12,40 +12,32 @@
 
     <p>This page verifies that the remove-node-text scriptlet works properly given the <a href="../config/remove-node-text.json">config</a>.</p>
 
-    <!-- This script should have its content removed because it contains "badScriptContent" -->
-    <script id="badScript">
-        window.badScriptRan = true;
-        const badScriptContent = 'This script should be removed';
-    </script>
+    <!-- This div should have its content removed because it contains "badTextContent" -->
+    <div id="badText">
+        badTextContent
+    </div>
 
-    <!-- This script should execute normally -->
-    <script id="goodScript">
-        window.goodScriptRan = true;
-        const goodScriptContent = 'This script should remain';
-    </script>
+    <!-- This div shouldn't be touched -->
+    <div id="goodText">
+        goodTextContent
+    </div>
 
     <script>
         // eslint-disable-next-line no-undef
-        test('Remove-node-text scriptlet should remove matching script content', async () => {
+        test('Remove-node-text scriptlet should remove matching text content', async () => {
             // Wait a bit for scriptlets to execute
             await new Promise(resolve => setTimeout(resolve, 100));
 
-            // Check if the scripts ran (they both should since they execute immediately)
-            const badScriptRan = typeof window.badScriptRan !== 'undefined' && window.badScriptRan === true;
-            const goodScriptRan = typeof window.goodScriptRan !== 'undefined' && window.goodScriptRan === true;
-
-            // Check if script content was removed from DOM by the scriptlet
-            const badScript = document.getElementById('badScript');
-            const goodScript = document.getElementById('goodScript');
+            // Check if text content was removed from DOM by the scriptlet
+            const badText = document.getElementById('badText');
+            const goodText = document.getElementById('goodText');
             
-            const badScriptTextRemoved = !badScript.textContent || !badScript.textContent.includes('badScriptContent');
-            const goodScriptTextRemains = goodScript.textContent && goodScript.textContent.includes('goodScriptContent');
+            const badTextRemoved = !badText.textContent || !badText.textContent.includes('badTextContent');
+            const goodTextRemains = goodText.textContent && goodText.textContent.includes('goodTextContent');
 
             return [
-                { name: 'Bad script executed before scriptlet could prevent it', result: badScriptRan, expected: true },
-                { name: 'Good script should have executed', result: goodScriptRan, expected: true },
-                { name: 'Bad script content should be removed from DOM', result: badScriptTextRemoved, expected: true },
-                { name: 'Good script content should remain in DOM', result: goodScriptTextRemains, expected: true }
+                { name: 'Bad text content should be removed from DOM', result: badTextRemoved, expected: true },
+                { name: 'Good text content should remain in DOM', result: goodTextRemains, expected: true }
             ];
         });
 
