Mirror native approach for headers in js api override

--- a/injected/integration-test/test-pages/windows-ch-brands/index.html
+++ b/injected/integration-test/test-pages/windows-ch-brands/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Windows Brand Hints</title>
+    <title>Windows CH Brands</title>
     <link rel="stylesheet" href="../shared/style.css">
 </head>
 <body>
     <p><a href="../index.html">[Home]</a></p>
+
+    <p>Windows CH Brands</p>
     <ul>
         <li><a href="./pages/brand-override.html">Brand Override</a> - <a href="./config/brand-override.json">Config</a></li>
     </ul>
