--- a/injected/integration-test/test-pages/windows-ch-brands/index.html
+++ b/injected/integration-test/test-pages/windows-ch-brands/index.html
@@ -12,6 +12,7 @@
     <p>Windows CH Brands</p>
     <ul>
         <li><a href="./pages/brand-override.html">Brand Override</a> - <a href="./config/brand-override.json">Config</a></li>
+        <li><a href="./pages/brands-missing.html">Brands Missing</a> - <a href="./config/brands-missing.json">Config</a></li>
     </ul>
 </body>
 </html>
