Rename feature more generally

--- a/injected/integration-test/test-pages/ua-ch-brands/pages/brand-override.html
+++ b/injected/integration-test/test-pages/ua-ch-brands/pages/brand-override.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Windows CH Brands - Brand Override</title>
+  <title>UA CH Brands - Brand Override</title>
   <link rel="stylesheet" href="../../shared/style.css">
 </head>
 <body>
     <script src="../../shared/utils.js"></script>
-    <p><a href="../index.html">[Windows CH Brands]</a></p>
+    <p><a href="../index.html">[UA CH Brands]</a></p>
 
-    <p>This page verifies that navigator.userAgentData.brands uses the configured brands from the windowsChBrands feature settings</p>
+    <p>This page verifies that navigator.userAgentData.brands uses the configured brands from the uaChBrands feature settings</p>
 
     <script>
         test('Brand override', async () => {
