--- a/injected/integration-test/test-pages/ua-ch-brands/pages/brands-missing.html
+++ b/injected/integration-test/test-pages/ua-ch-brands/pages/brands-missing.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Windows CH Brands - Brands Missing</title>
+  <title>UA CH Brands - Brands Missing</title>
   <link rel="stylesheet" href="../../shared/style.css">
 </head>
 <body>
     <script src="../../shared/utils.js"></script>
-    <p><a href="../index.html">[Windows CH Brands]</a></p>
+    <p><a href="../index.html">[UA CH Brands]</a></p>
 
     <p>This page verifies that when brands setting is missing/null/empty, the feature returns early and original brands are preserved</p>
 
