--- a/injected/integration-test/test-pages/ua-ch-brands/index.html
+++ b/injected/integration-test/test-pages/ua-ch-brands/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Windows CH Brands</title>
+    <title>UA CH Brands</title>
     <link rel="stylesheet" href="../shared/style.css">
 </head>
 <body>
     <p><a href="../index.html">[Home]</a></p>
 
-    <p>Windows CH Brands</p>
+    <p>UA CH Brands</p>
     <ul>
         <li><a href="./pages/brand-override.html">Brand Override</a> - <a href="./config/brand-override.json">Config</a></li>
         <li><a href="./pages/brands-missing.html">Brands Missing</a> - <a href="./config/brands-missing.json">Config</a></li>
