--- a/injected/integration-test/test-pages/ua-ch-brands/pages/brand-override.html
+++ b/injected/integration-test/test-pages/ua-ch-brands/pages/brand-override.html
@@ -20,6 +20,11 @@
                 const brands = navigator.userAgentData.brands;
                 const brandNames = new Set(brands.map(b => b.brand));
 
+                const hasGrease = brands.some(b => {
+                    const name = b.brand;
+                    return name.trim().startsWith('Not') || /[^\w\s.]/.test(name);
+                });
+
                 results.push({
                     name: 'contains Chromium brand',
                     result: brandNames.has('Chromium'),
@@ -32,11 +37,21 @@
                     expected: true
                 });
 
+                // Expect 3 brands if GREASE present, 2 if not
+                const expectedBrandCount = hasGrease ? 3 : 2;
                 results.push({
-                    name: 'has correct number of brands',
+                    name: `has correct number of brands (${hasGrease ? 'with GREASE' : 'without GREASE'})`,
                     result: brands.length,
-                    expected: 2
+                    expected: expectedBrandCount
                 });
+
+                if (hasGrease) {
+                    results.push({
+                        name: 'GREASE value is preserved',
+                        result: hasGrease,
+                        expected: true
+                    });
+                }
 
                 results.push({
                     name: 'does not contain Microsoft Edge brand',
@@ -54,7 +69,14 @@
                     try {
                         const highEntropyValues = await navigator.userAgentData.getHighEntropyValues(['brands']);
                         if (highEntropyValues.brands) {
-                            const heBrandNames = new Set(highEntropyValues.brands.map(b => b.brand));
+                            const heBrands = highEntropyValues.brands;
+                            const heBrandNames = new Set(heBrands.map(b => b.brand));
+                            
+                            const heHasGrease = heBrands.some(b => {
+                                const name = b.brand;
+                                return name.trim().startsWith('Not') || /[^\w\s.]/.test(name);
+                            });
+
                             results.push({
                                 name: 'high entropy contains Chromium',
                                 result: heBrandNames.has('Chromium'),
@@ -65,6 +87,14 @@
                                 result: heBrandNames.has('DuckDuckGo'),
                                 expected: true
                             });
+
+                            if (heHasGrease) {
+                                results.push({
+                                    name: 'high entropy GREASE value is preserved',
+                                    result: heHasGrease,
+                                    expected: true
+                                });
+                            }
 
                             results.push({
                                 name: 'high entropy does not contain Microsoft Edge',
