--- a/special-pages/pages/new-tab/public/index.html
+++ b/special-pages/pages/new-tab/public/index.html
@@ -3,14 +3,7 @@
 <head>
     <title>New Tab Page</title>
     <style>
-        body {
-            background-color: #fafafa;
-        }
-        @media (prefers-color-scheme: dark) {
-            body {
-                background-color: #333;
-            }
-        }
+        /*{{INIT_STYLES}}*/
     </style>
     <meta name="robots" content="noindex,nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
