Add 'ready' notification

--- a/special-pages/pages/new-tab/public/index.html
+++ b/special-pages/pages/new-tab/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./dist/index.css" />
 </head>
 <body>
+&lt;body/&gt;
 <div id="app"></div>
 <script type="module" src="./dist/index.js"></script>
 </body>
