--- a/injected/integration-test/test-pages/ua-ch-brands/pages/brand-override.html
+++ b/injected/integration-test/test-pages/ua-ch-brands/pages/brand-override.html
@@ -21,25 +21,25 @@
                 const brandNames = new Set(brands.map(b => b.brand));
 
                 results.push({
-                    name: 'contains Chromium brand',
+                    name: 'navigator.userAgentData.brands contains Chromium',
                     result: brandNames.has('Chromium'),
                     expected: true
                 });
 
                 results.push({
-                    name: 'contains DuckDuckGo brand',
+                    name: 'navigator.userAgentData.brands contains DuckDuckGo',
                     result: brandNames.has('DuckDuckGo'),
                     expected: true
                 });
 
                 results.push({
-                    name: 'does not contain Microsoft Edge brand',
+                    name: 'navigator.userAgentData.brands does not contain Microsoft Edge',
                     result: !brandNames.has('Microsoft Edge'),
                     expected: true
                 });
 
                 results.push({
-                    name: 'does not contain Microsoft Edge WebView2 brand',
+                    name: 'navigator.userAgentData.brands does not contain Microsoft Edge WebView2',
                     result: !brandNames.has('Microsoft Edge WebView2'),
                     expected: true
                 });
@@ -51,24 +51,24 @@
                             const heBrandNames = new Set(highEntropyValues.brands.map(b => b.brand));
 
                             results.push({
-                                name: 'high entropy contains Chromium',
+                                name: 'navigator.userAgentData.getHighEntropyValues brands contains Chromium',
                                 result: heBrandNames.has('Chromium'),
                                 expected: true
                             });
                             results.push({
-                                name: 'high entropy contains DuckDuckGo',
+                                name: 'navigator.userAgentData.getHighEntropyValues brands contains DuckDuckGo',
                                 result: heBrandNames.has('DuckDuckGo'),
                                 expected: true
                             });
 
                             results.push({
-                                name: 'high entropy does not contain Microsoft Edge',
+                                name: 'navigator.userAgentData.getHighEntropyValues brands does not contain Microsoft Edge',
                                 result: !heBrandNames.has('Microsoft Edge'),
                                 expected: true
                             });
 
                             results.push({
-                                name: 'high entropy does not contain Microsoft Edge WebView2',
+                                name: 'navigator.userAgentData.getHighEntropyValues brands does not contain Microsoft Edge WebView2',
                                 result: !heBrandNames.has('Microsoft Edge WebView2'),
                                 expected: true
                             });
@@ -87,24 +87,24 @@
                             const fvlBrandNames = new Set(fullVersionData.fullVersionList.map(b => b.brand));
 
                             results.push({
-                                name: 'fullVersionList contains Chromium',
+                                name: 'navigator.userAgentData.getHighEntropyValues fullVersionList contains Chromium',
                                 result: fvlBrandNames.has('Chromium'),
                                 expected: true
                             });
                             results.push({
-                                name: 'fullVersionList contains DuckDuckGo',
+                                name: 'navigator.userAgentData.getHighEntropyValues fullVersionList contains DuckDuckGo',
                                 result: fvlBrandNames.has('DuckDuckGo'),
                                 expected: true
                             });
 
                             results.push({
-                                name: 'fullVersionList does not contain Microsoft Edge',
+                                name: 'navigator.userAgentData.getHighEntropyValues fullVersionList does not contain Microsoft Edge',
                                 result: !fvlBrandNames.has('Microsoft Edge'),
                                 expected: true
                             });
 
                             results.push({
-                                name: 'fullVersionList does not contain Microsoft Edge WebView2',
+                                name: 'navigator.userAgentData.getHighEntropyValues fullVersionList does not contain Microsoft Edge WebView2',
                                 result: !fvlBrandNames.has('Microsoft Edge WebView2'),
                                 expected: true
                             });
